[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "solveit_dmtools"
dynamic = ["version"]
description = "Personalized tools to add functionality to SolveIt"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Duane Milne", email = "duane.milne@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['dialoghelper', 'contextkit', 'lisette']

[project.urls]
Repository = "https://github.com/shuane/solveit_dmtools"
Documentation = "https://shuane.github.io/solveit_dmtools"

[project.entry-points.nbdev]
solveit_dmtools = "solveit_dmtools._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "solveit_dmtools.__version__"}

[tool.setuptools.packages.find]
include = ["solveit_dmtools"]

[tool.nbdev]
